<resources>
    <!-- App related settings -->
    <string name="app_name">Popular Movies</string>
    <string name="app_content_authority">com.udacity.suarte.popularmovies.provider</string>
    <string name="app_sync_account_type">popularmovies.suarte.udacity.com</string>

    <!--Activities related settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences related strings -->
    <string name="pref_screen_title">Popular Movie Settings</string>

    <string name="pref_sort_criteria_key">sortCriteriaKey</string>
    <string name="pref_sort_criteria_title">Sort criteria</string>
    <string name="pref_sort_criteria_dialog_title">Choose a sort criteria</string>

    <string name="pref_sort_criteria_most_popular_option">Most popular</string>
    <string name="pref_sort_criteria_highest_rated_option">Highest rated</string>
    <string name="pref_sort_criteria_most_popular_value">most_popular</string>
    <string name="pref_sort_criteria_highest_rated_value">highest_rated</string>

    <string name="pref_max_number_of_pages_key">maxNumberOfPages</string>
    <string name="pref_max_number_of_pages_title">Max pages to be imported</string>
    <string name="pref_max_number_of_pages_dialog_title">Choose how many pages should be imported</string>
    <string name="pref_max_number_of_pages_default_value">1</string>

    <string name="pref_show_only_favorites_key">showOnlyFavoritesKey</string>
    <string name="pref_show_only_favorites_title">Show only favorites?</string>
    <string name="pref_show_only_favorites_not_checked">false</string>

    <!-- User profile related string -->
    <string name="user_profile_first_run_key">userProfileFirstRunKey</string>

    <!-- Labels -->
    <string name="label_videos_and_reviews">Trailers and Reviews</string>
    <string name="label_favorite_option">This is one of my favorites!</string>

    <!-- Fragment tags -->
    <string name="fragment_movies_tag">fragmentMoviesTAG</string>

    <!-- System messages -->
    <string name="cant_play_video_message">Sorry... Could not find any video player app.</string>
    <string name="movies_listed_by_message">Movies being listed by \'%s\'</string>

</resources>
